kubernetes-networks/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
webhooks:
- name: validate.nginx.ingress.kubernetes.io
  clientConfig:
    service:
      namespace: ingress-nginx
      name: ingress-nginx-controller-admission
      path: "/networking/v1/ingresses"
  rules:
  - apiGroups:   ["networking.k8s.io"]
    apiVersions: ["v1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["ingresses"]
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions: ["v1"]
